--- a/config.org
+++ b/config.org
@@ -86,20 +86,29 @@ Doom exposes five (optional) variables for controlling fonts in Doom. Here are t
 - ~doom-variable-pitch-font~
 - ~doom-big-font~ -- used for ~doom-big-font-mode~ Use this for presentations or streaming.
 They all accept either a font-spec, font string ("Input Mono-12"), or xlfd font string. You generally
-only need these two:
-#+BEGIN_SRC emacs-lisp
-(cond ((font-info (font-spec :family "Iosevka" :size 18))    (setq my-fixed-font (font-spec :family "Iosevka" :size 18)))
-      ((font-info (font-spec :family "Fira Mono" :size 18)   (setq my-fixed-font (font-spec :family "Fira Mono" :size 18))))
-      ((font-info (font-spec :family "Ubuntu Mono" :size 18) (setq my-fixed-font (font-spec :family "Ubuntu Mono" :size 18))))
-      (t                                                     (setq my-fixed-font (font-spec :family "Courier 10 Pitch" :size 18))))
-(setq doom-font my-fixed-font)
-;;(setq doom-variable-pitch-font (font-spec :family "ETBookOT"))
-(cond ((font-info (font-spec :family "Source Sans Variable" :size 18)) (setq my-variable-font (font-spec :family "Source Sans Variable" :size 18)))
-      ((font-info (font-spec :family "Source Sans Pro" :size 18))      (setq my-variable-font (font-spec :family "Source Sans Pro" :size 18)))
-      ((font-info (font-spec :family "Tahoma" :size 18))               (setq my-variable-font (font-spec :family "Tahoma" :size 18)))
-      (t                                                               (setq my-variable-font (font-spec :family "Courier 10 Pitch" :size 18))))
-(setq doom-variable-pitch-font my-variable-font)
+only need ~doom-font~ and ~doom-variable-pitch-font~:
+*** Fixed Font
+#+name: fixed-font
+#+BEGIN_SRC emacs-lisp :tangle no
+(cond ((font-info (font-spec :family "Iosevka" :size 18))    '(font-spec :family "Iosevka" :size 18))
+      ((font-info (font-spec :family "Fira Mono" :size 18)   '(font-spec :family "Fira Mono" :size 18)))
+      ((font-info (font-spec :family "Ubuntu Mono" :size 18) '(font-spec :family "Ubuntu Mono" :size 18)))
+      (t                                                     '(font-spec :family "Courier 10 Pitch" :size 18)))
 #+END_SRC
+#+begin_src emacs-lisp :noweb yes
+(setq doom-font <<fixed-font()>>)
+#+end_src
+*** Variable Font
+#+name: variable-font
+#+begin_src emacs-lisp :tangle no
+(cond ((font-info (font-spec :family "Source Sans Variable" :size 18)) '(font-spec :family "Source Sans Variable" :size 18))
+      ((font-info (font-spec :family "Source Sans Pro" :size 18))      '(font-spec :family "Source Sans Pro" :size 18))
+      ((font-info (font-spec :family "Tahoma" :size 18))               '(font-spec :family "Tahoma" :size 18))
+      (t                                                               '(font-spec :family "Courier 10 Pitch" :size 18)))
+#+end_src
+#+begin_src emacs-lisp :noweb yes
+(setq doom-variable-pitch-font <<variable-font()>>)
+#+end_src
 ** Mixed-pitch Fonts
 *** Package
 #+BEGIN_SRC emacs-lisp :tangle packages.el
