--- a/config.org
+++ b/config.org
@@ -88,23 +88,28 @@ Doom exposes five (optional) variables for controlling fonts in Doom. Here are t
 They all accept either a font-spec, font string ("Input Mono-12"), or xlfd font string. You generally
 only need ~doom-font~ and ~doom-variable-pitch-font~:
 *** Fixed Font
+This will fail with doom sync
 #+name: fixed-font
 #+BEGIN_SRC emacs-lisp :tangle no
-(cond ((font-info (font-spec :family "Iosevka" :size 14.0))    '(font-spec :family "Iosevka" :size 14.0))
-      ((font-info (font-spec :family "Fira Mono" :size 14.0)   '(font-spec :family "Fira Mono" :size 14.0)))
-      ((font-info (font-spec :family "Ubuntu Mono" :size 14.0) '(font-spec :family "Ubuntu Mono" :size 14.0)))
-      (t                                                     '(font-spec :family "Courier 10 Pitch" :size 14.0)))
+(if window-system
+    (cond ((font-info (font-spec :family "Iosevka" :size 14.0))    '(font-spec :family "Iosevka" :size 14.0))
+          ((font-info (font-spec :family "Fira Mono" :size 14.0)   '(font-spec :family "Fira Mono" :size 14.0)))
+          ((font-info (font-spec :family "Ubuntu Mono" :size 14.0) '(font-spec :family "Ubuntu Mono" :size 14.0)))
+          (t                                                     '(font-spec :family "Courier 10 Pitch" :size 14.0)))
+  '(font-spec :family "Iosevka" :size 14.0))
 #+END_SRC
-#+begin_src emacs-lisp :noweb yes
+#+begin_src emacs-lisp :tangle no :noweb yes
 (setq doom-font <<fixed-font()>>)
 #+end_src
 *** Variable Font
 #+name: variable-font
 #+begin_src emacs-lisp :tangle no
-(cond ((font-info (font-spec :family "Source Sans Variable" :size 18.0)) '(font-spec :family "Source Sans Variable" :size 18.0))
-      ((font-info (font-spec :family "Source Sans Pro" :size 18.0))      '(font-spec :family "Source Sans Pro" :size 18.0))
-      ((font-info (font-spec :family "Tahoma" :size 18.0))               '(font-spec :family "Tahoma" :size 18.0))
-      (t                                                               '(font-spec :family "Courier 10 Pitch" :size 18.0)))
+(if window-system
+    (cond ((font-info (font-spec :family "Source Sans Variable" :size 18.0)) '(font-spec :family "Source Sans Variable" :size 18.0))
+          ((font-info (font-spec :family "Source Sans Pro" :size 18.0))      '(font-spec :family "Source Sans Pro" :size 18.0))
+          ((font-info (font-spec :family "Tahoma" :size 18.0))               '(font-spec :family "Tahoma" :size 18.0))
+          (t                                                               '(font-spec :family "Courier 10 Pitch" :size 18.0)))
+  '(font-spec :family "Source Sans Variable" :size 18.0))
 #+end_src
 #+begin_src emacs-lisp :noweb yes
 (setq doom-variable-pitch-font <<variable-font()>>)
