--- a/config.org
+++ b/config.org
@@ -108,7 +108,7 @@ This will fail with doom sync
     (cond ((font-info (font-spec :family "Source Sans Pro" :size 18.0))      '(font-spec :family "Source Sans Pro" :size 18.0))
           ((font-info (font-spec :family "Tahoma" :size 18.0))               '(font-spec :family "Tahoma" :size 18.0))
           (t                                                               '(font-spec :family "Courier 10 Pitch" :size 18.0)))
-  '(font-spec :family "Source Sans Variable" :size 18.0))
+  '(font-spec :family "Source Sans Pro" :size 18.0))
 #+end_src
 #+begin_src emacs-lisp :noweb yes
 (cond ((string= system-type "berkeley-unix") (setq doom-variable-pitch-font (font-spec :family "Source Sans 3" :size 18.0)))
