--- a/config.org
+++ b/config.org
@@ -1752,14 +1752,17 @@ stop_cmd="${name}_stop"
 load_rc_config $name
 : ${emacsd_enable:=no}
 : ${_msg="Emacs daemon started."}
+: ${emacsd_user:=nobody}
+: ${emacsd_socket:=server}
+: ${emacsd_args:=""}
 
 emacsd_start()
 {
-    su ${emacsd_user:=nobody} -c "env HOME=/home/${emacsd_user:=nobody} /usr/local/bin/emacs --daemon=${emacsd_socket:=server}"
+    su ${emacsd_user:=nobody} -c "env HOME=/home/${emacsd_user} /usr/local/bin/emacs ${emacsd_args} --daemon=${emacsd_socket}"
 }
 emacsd_stop()
 {
-    su ${emacsd_user:nobody} -c "/usr/local/bin/emacsclient --socket ${emacsd_socket:=server} --eval \"(kill-emacs)\""
+    su ${emacsd_user:nobody} -c "/usr/local/bin/emacsclient --socket ${emacsd_socket} --eval \"(kill-emacs)\""
 }
 run_rc_command "$1"
 #+end_src
